Order IL txs before starting their selection and include IL in payloadId creation
Signed-off-by: Fabio Di Fabio <fabio.difabio@consensys.net>